# X3872Analysis

./: .gitignore  Alias.sh  README.md
MachineLearning/: README.md
MachineLearning/config/: configML_2022.yml  configML_2023.yml  configML_2024.yml  configML_all.yml  configML_all_Psi2S.yml  configML_example.yml
MachineLearning/task/: RunModelTraining.py
MachineLearning/utils/: ComputeMLEfficiency.py  ComputeMLEfficiency_bk_211125_0917.py  plot_utils.py  plot_utils_pc.py
PYTHIA_EVTGEN/: CMakeLists.txt  Init_ustcfs.sh  Init_xzj_pc.sh  README.md  setupEvtGen.sh  submit.sh
PYTHIA_EVTGEN/Basefile/: DECAY.DEC  DECAY_Psi2S.DEC  DECAY_X3872_JpsiRho_S.DEC  DECAY_X3872_PHSP.DEC  DECAY_X3872_VVPIPI.DEC  DECAY_X3872_rhoJpsi.DEC
PYTHIA_EVTGEN/src/: RunPsi2SJpsiPiPi_FromSpec.cpp  RunX3872JpsiPiPi_FromSpec.cpp  RunX3872JpsiRho.cpp  RunX3872JpsiRho_FromSpec.cpp  TreeMaker.cpp  TreeMaker.h  VarManager.h
TreeAnalysis/: README.md  runAnalysis.sh
TreeAnalysis/config/: config_FullAnalysisChain.json  config_skim.json  config_skim_createCut.json  config_skim_simcomparison.json  config_skim_tunecut.json  config_skim_tunecut_merged.json  config_treemaker_2022.json  config_treemaker_2023.json  config_treemaker_2024.json  config_treemaker_Psi2S.json  config_treemaker_X3872.json  config_treemaker_X3872_PHSP.json  config_treemaker_data.json
TreeAnalysis/header/: BDTtree.C  BDTtree.h  EvtgenSim.C  EvtgenSim.h  Quadplet.C  Quadplet.h  SkimmedTree.C  SkimmedTree.h
TreeAnalysis/tasks/: CalculateEff.cxx  CutGCreater.cxx  DrawAnalysisResults.cxx  PerformanceMaker.cxx  RunAnalysis.cxx  RunSignalExtraction.cxx  RunTreeMaker.cxx  ScanBDT.cxx
